<resources>
    <string name="app_name">MyCalculatorApp</string>

    <string name="Delete">Delete</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Divide">/</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Mul">x</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Minus">-</string>
    <string name="Point">.</string>
    <string name="Zero">0</string>
    <string name="Equals">=</string>
    <string name="Plus">+</string>
    <string name="Display1">Enter a value</string>
    <string name="Display2">Result</string>
</resources>